Replaced dTV with DScaler changed logos

--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Cards Supported</title>
+<title>DScaler - Cards Supported</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Cards Supported&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -151,7 +151,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>Will Not Work With dTV -- It Contains the ATI Rage Theater Pro 
+            <p>Will Not Work With DScaler - It Contains the ATI Rage Theater Pro 
               Chipset</p>
           </td>
         </tr>
@@ -379,7 +379,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>This Card Will Not Work With dTV -- It Contains the Zoran Chipset</p>
+            <p>This Card Will Not Work With DScaler - It Contains the Zoran Chipset</p>
           </td>
         </tr>
         <tr> 
