--- a/htdocs/screenshots/Blue_Submarine_No6_Screenshots.htm
+++ b/htdocs/screenshots/Blue_Submarine_No6_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" -->
-<title>dTV -- Blue Submarine #6 Screenshots</title>
+<title>DScaler - Blue Submarine #6 Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->
       Blue Submarine No. 6 (DVD) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
@@ -50,7 +50,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <b>Connection</b>: S-Video<br>
         <b>Capture/Tuner Card</b>: Pinnacle PCTV Rave<br>
       </p>
-      <p>Thanks to Felix for showing the wonderful picture produced by dTV for
+      <p>Thanks to Felix for showing the wonderful picture produced by DScaler for
         Japanese anime with DVD!</p>
       <p>A capture from Blue Submarine No. 6. Feeling lucky today?<br>
         <img src="Blue_Submarine_No6.jpg" width="754" height="480" border="3">
