--- a/htdocs/screenshots/HD_Screenshots.htm
+++ b/htdocs/screenshots/HD_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Various HD Screenshots</title>
+<title>DScaler - Various HD Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Various HD Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -44,10 +44,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>Below are various HD screenshots provided by Li On. These screenshots 
         are of 1080i video downconverted to 480i and fed into dTV version 2.0.2 
         using s-video. Of course, it would be preferrable in most normal viewing 
-        conditions to view the 1080i video directly without dTV, but these screenshots 
-        show the versatility of dTV in select circumstances.</p>
+        conditions to view the 1080i video directly without DScaler, but these screenshots 
+        show the versatility of DScaler in select circumstances.</p>
       <p>Please note that these are 720 x 480 overlay grabs and that they would 
-        be squeezed by dTV for normal viewing conditions to the 16:9 aspect ratio.<br>
+        be squeezed by DScaler for normal viewing conditions to the 16:9 aspect ratio.<br>
       </p>
       <p><b>Title</b>: Various HD Screenshots<br>
         <b>Connection</b>: S-Video<br>
