--- a/htdocs/screenshots/IQ_screenshots.htm
+++ b/htdocs/screenshots/IQ_screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- IQ (Laserdisc) Screenshots</title>
+<title>DScaler - IQ (Laserdisc) Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       IQ (Laserdisc) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
@@ -49,17 +49,17 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <b>Connection</b>: S-Video<br>
         <b>Capture/Tuner Card</b>: Zoltrix TV-Max<br>
       </p>
-      <p>Thanks to Li On for showing how dTV excels versus other options!</p>
+      <p>Thanks to Li On for showing how DScaler excels versus other options!</p>
       <p>The following image is a capture using the <b>Bob</b> deinterlace method--severe 
         artifacts.<br>
         <img src="iq-bob.jpg" width="640" height="480"> </p>
       <p>The following image is a capture using the <b>Weave</b> deinterlace method--only 
         slightly better.<br>
         <img src="iq-weave.jpg" width="640" height="480"> </p>
-      <p>The following image is a capture using dTV's <b>video</b> deinterlacing--looks 
+      <p>The following image is a capture using DScaler's <b>video</b> deinterlacing--looks 
         pretty good.<br>
         <img src="iq-video.jpg" width="640" height="480"> </p>
-      <p> The following image is a capture using dTV's <b>automatic pulldown algorithm</b>--amazingly 
+      <p> The following image is a capture using DScaler's <b>automatic pulldown algorithm</b>--amazingly 
         few artifacts!<br>
         <img src="iq-autofilm.jpg" width="640" height="480"> <br>
       </p>
