--- a/htdocs/user_support.htm
+++ b/htdocs/user_support.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" --> 
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- User Support</title>
+<title>DScaler - User Support</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,7 +29,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->User 
       Support &nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -41,14 +41,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Currently, all support for dTV is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi?action=intro&showall=1">AVS 
+      <p>Currently, all support for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi?action=intro&showall=1">AVS 
         Home Theater PC Forum</a>, the largest such forum on the internet and 
         a great place to pick up information and advice. You can post questions, bug reports, and suggestions 
         there. We suggest that you do a <a href="http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a> 
         of the forum to ensure that your item is not duplicative.&nbsp; When
       using this search you must select &quot;Home Theater Computers&quot; in
       the Search Forum/Archive box.</p>
-      <p>Please do <u>not</u> email the developers directly about dTV.</p>
+      <p>Please do <u>not</u> email the developers directly about DScaler.</p>
       <p>Support is given by the helpful members of the community, whether they 
         be involved in this project or not. However, some people that may appear 
         often to answer user questions and who are affiliated with project include:</p>
