--- a/htdocs/32Spec.htm
+++ b/htdocs/32Spec.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Mark Rejhon's 3:2 Pulldown Algorithm</title>
+<title>DScaler - Mark Rejhon's 3:2 Pulldown Algorithm</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Mark 
       Rejhon's&nbsp;<br>
@@ -46,7 +46,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Home Theater Forum</a>.</p>
       <p> Here's a simplified pseudocode implementation of <A HREF="http://www.avsforum.com/ubb/Forum12/HTML/000071.html" TARGET=_blank>my 
         3:2 pulldown detection algorithm</A>. You might even easily be able to 
-        implement this into dTV. Almost all of us really don't care about 2:2 
+        implement this into DScaler. Almost all of us really don't care about 2:2 
         pulldown at all as I only see this happening only 0.1 to 0.5% of the time 
         on NTSC television. Without further ado, here you go!</p>
       <h3><br>
@@ -264,7 +264,7 @@ ENDLOOP
       <p><b>APPENDIX: PSEUDOCODE WITHOUT COMMENTS</b></p>
       <p>For determining the amount of "code bulk", this is how small the pseudocode 
         is, when I remove my comments from the above pseudocode. Look at how small 
-        the pseudocode is - since you already have the routines written in dTV, 
+        the pseudocode is - since you already have the routines written in DScaler, 
         look at how simple it is to implement automatic 3:2 pulldown deinterlacing!</p>
       <p>
       <blockquote>
