--- a/htdocs/CVS_Instructions.htm
+++ b/htdocs/CVS_Instructions.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" --> 
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- CVS Instructions</title>
+<title>DScaler - CVS Instructions</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,7 +29,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="3" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160" height="142"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160" height="142"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom" height="142"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->CVS 
       Instructions &nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
