--- a/htdocs/Developer_docs.htm
+++ b/htdocs/Developer_docs.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Developer Docs</title>
+<title>DScaler - Developer Docs</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developer 
       Documentation &nbsp;<!-- #EndEditable --></b></font></td>
@@ -41,14 +41,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>First of all welcome to dTV development!&nbsp; If you have any interest 
-        in video and TV I'm sure you will find working on dTV rewarding.&nbsp; 
+      <p>First of all welcome to DScaler development!&nbsp; If you have any interest 
+        in video and TV I'm sure you will find working on DScaler rewarding.&nbsp; 
         There is a pretty steep learning curve but what you learn will be useful 
         in every area of your home theater hobby.</p>
       <h2><br>
         Prerequisites</h2>
       <p>You must be a proficient C programmer with some knowledge of windows 
-        programming.&nbsp; dTV is probably not a good project to cut your teeth 
+        programming.&nbsp; DScaler is probably not a good project to cut your teeth 
         on as any crashes&nbsp;while developing causes your computer to hang.&nbsp; 
         Be careful and back up your machine regularly.</p>
       <p>You must have access to a version of Microsoft Visual C++ and the latest 
@@ -87,7 +87,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         what the code is trying to do.&nbsp; The code is untested and there have 
         been no reported successes with it.</p>
       <p>Deinterlace.c - Contains an array containing information about all the
-      deinterlacing routines used by dTV.</p>
+      deinterlacing routines used by DScaler.</p>
       <p>DI_XXXX.c - Contains the code for the XXXX deinterlacing method</p>
       <p><b>dTV.c</b> - Contains the Main windows event handler and WinMain.&nbsp; 
         This file is the best place to start to get a feel for how the software 
@@ -104,7 +104,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         definitely do with improvement.</p>
       <p>Tuner.c - Handles the tuner and also the country settings.</p>
       <p>TVCards.c - Contains the details of all the cards that should be supported 
-        by dTV.&nbsp; The data is taken from the bttv driver so check that they 
+        by DScaler.&nbsp; The data is taken from the bttv driver so check that they 
         haven't changed their values.&nbsp; The structures are similar but not 
         exactly the same so check that the values are being transposed properly.</p>
       <p>vbi.c - High level VBI decoding. VBI_DecodeLine is the high level function.</p>
