--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal-multilang.dwt" --> 
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Frequently Asked Questions</title>
+<title>DScaler - Frequently Asked Questions</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,7 +29,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160" rowspan="2"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="francais/FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a></font></font></b><img src="images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><img src="images/selector-english.gif" width="45" height="18" border="0"></font></font></b></font><!-- #EndEditable --></font></b></font></td>
   </tr>
   <tr> 
@@ -72,8 +72,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         with a progressive scan source that was interlaced right before.
       <p> 
       <h2>Who made what ?</h2>
-      <p> See <a href="Authors.htm">dTV -- Authors</a> for the main contributors 
-        and <a href="Thanks.htm">dTV -- Thanks</a> for a list of people who have 
+      <p> See <a href="Authors.htm">DScaler - Authors</a> for the main contributors 
+        and <a href="Thanks.htm">DScaler - Thanks</a> for a list of people who have 
         helped make dTV a success. 
       <h2>How much does dTV cost ?</h2>
       <p> 1000$ (plus taxes) :-) Of course not, dTV is fully free of charge, freeware, 
