--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- About</title>
+<title>DScaler - About</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->About&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -45,7 +45,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         monitor or projector.<p> Analog, interlaced video is what output devices like
       VCRs, Laserdiscs, 
         game consoles, DVD players output
-      <p> Unlike most existing software that tries to do the same, dTV implements 
+      <p> Unlike most existing software that tries to do the same, DScaler implements 
         very sophisticated algorithms to deinterlace such sources. Using such 
         algorithms makes sure that each kind of video source is handled a different 
         way. It provides the user with a level of image quality unknown to PC 
