--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Developers</title>
+<title>DScaler - Developers</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developers&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -40,14 +40,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p><b>Additional developers are needed for dTV!</b> In only a short time, 
+      <p><b>Additional developers are needed for DScaler!</b> In only a short time, 
         this project has garnered a <b>large, loyal, active, and knowledgable 
         user-base</b> of videophiles. This project is making waves in the home 
         theater industry! The project is currently in need of developers with 
         a broad range of skills (C++, assembly, user interface, video internals, 
         etc.). Your skills will be utilized immediately, as we seek to keep this 
         extraordinary momentum going. Please see the <a href="Developer_docs.htm">Developer 
-        Documentation</a> to get started on dTV development and then introduce 
+        Documentation</a> to get started on DScaler development and then introduce 
         yourself to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a>.</p>
       <p>Please refer to the <a href="bugs/Bugs_108.htm">bugs</a> and <a href="Todo.htm">Todo</a> 
@@ -56,7 +56,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         list to keep yourself up to date!). If you think that you can take on 
         a part of one of these tasks, everyone on the mailing list would love 
         to hear from you.</p>
-      <p>dTV is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
+      <p>DScaler is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
         the latest release source zipped. In addition to the latest release source, 
         you may be interested in reviewing the latest beta source, updated from 
@@ -94,7 +94,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
         as well as Teletext and Closed-Captioning.</p>
       <p>An explanation of the <a href="IniFile.HTM">options available</a> in 
-        the dTV.ini file.</p>
+        the DScaler.ini file.</p>
       <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tools</a> 
         for Windows 9x.</p>
       <h2> <br>
