--- a/htdocs/dtv-vs-windvd/Passion_Of_Mind_B.htm
+++ b/htdocs/dtv-vs-windvd/Passion_Of_Mind_B.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Passion of Mind Correct</title>
+<title>DScaler - Passion of Mind Correct</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Your Answer Is...&nbsp;<!-- #EndEditable --></b></font></td>
@@ -47,7 +47,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         CORRECT!</font></h2>
       <h2>&nbsp;</h2>
       <h2 align="center">Now wasn't that fun? <a href="../downloads.htm">Download</a> 
-        dTV<br>
+        DScaler<br>
         and have this kind of fun every day!</h2>
       <h2 align="center">&nbsp;</h2>
       <!-- #EndEditable --></td>
