--- a/htdocs/dtv-vs-windvd/Shakespeare_In_Love_WinDVD_Showdown.htm
+++ b/htdocs/dtv-vs-windvd/Shakespeare_In_Love_WinDVD_Showdown.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Shakespeare In Love dTV Showdown</title>
+<title>DScaler - Shakespeare In Love DScaler Showdown</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,10 +28,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
-      Shakespeare In Love dTV v. WinDVD&nbsp;<!-- #EndEditable --></b></font></td>
+      Shakespeare In Love DScaler v. WinDVD&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -43,17 +43,17 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h2>Shakespeare in Love (DVD)</h2>
       <p>Below is an A/B comparison provided by Li On of Shakespeare in Love with 
-        WinDVD and dTV version 1.6 Beta 4. Click on the image below that you think 
-        is <b>dTV</b>. On this shot, the color differences are slightly clearer 
+        WinDVD and DScaler (dTV version 1.6 Beta 4). Click on the image below that you think 
+        is <b>DScaler</b>. On this shot, the color differences are slightly clearer 
         than the others in the showdown.<br>
       </p>
       <p><b>Title</b>: Shakespeare in Love<br>
-        <b>Sources</b>: WinDVD v. Sony S7000 DVD player (for dTV)<br>
-        <b>Connection</b>: S-Video (for dTV)<br>
-        <b>Capture/Tuner Card</b>: Zoltrix TV-Max (for dTV)<br>
+        <b>Sources</b>: WinDVD v. Sony S7000 DVD player (for DScaler)<br>
+        <b>Connection</b>: S-Video (for DScaler)<br>
+        <b>Capture/Tuner Card</b>: Zoltrix TV-Max (for DScaler)<br>
         <b>GeForce MX Overlay Settings</b>: Brightness 130, Contrast 95, Hue default 
         and Saturation 95 using reference 6.18 driver.<br>
-        <b>dTV Picture Control Settings</b>: Brightness 18, Contrast 205, Color 
+        <b>DScaler Picture Control Settings</b>: Brightness 18, Contrast 205, Color 
         216, U/V at default and overscan at 2%</p>
       <p>Put on your classes and get really close to the screen...</p>
       <p> <a href="Shakespeare_In_Love_A.htm"><img src="Shakespeare_In_Love.jpg" width="720" height="480" border="0"></a></p>
