--- a/htdocs/screenshots/Dead_Or_Alive_2_Screenshots.htm
+++ b/htdocs/screenshots/Dead_Or_Alive_2_Screenshots.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Dead or Alive 2 (PSX2) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
@@ -49,11 +49,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <b>Source</b>: Playstation 2<br>
         <b>Connection</b>: S-Video<br>
         <b>Capture/Tuner Card</b>: Pinnacle PCTV Rave</p>
-      <p>Thanks to Felix for showing what dTV can do for video games on BIG screens!</p>
-      <p>Intro -- Real-time rendered sequence, handled by dTV's video deinterlacing 
+      <p>Thanks to Felix for showing what DScaler can do for video games on BIG screens!</p>
+      <p>Intro -- Real-time rendered sequence, handled by DScaler's video deinterlacing 
         algorithm.<br>
         <img src="Dead_Or_Alive_2.jpg" width="754" height="480"> </p>
-      <p>Fast <b>action</b> capture, handled by dTV's video deinterlacing algorithm.<br>
+      <p>Fast <b>action</b> capture, handled by DScaler's video deinterlacing algorithm.<br>
         <img src="Dead_Or_Alive_2_Action.jpg" width="754" height="480"> 
       </p>
       <!-- #EndEditable --></td>
