--- a/htdocs/screenshots/Dynasty_Warrior_2_Screenshots.htm
+++ b/htdocs/screenshots/Dynasty_Warrior_2_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Dynasty Warrior 2 Intro Movie Screenshot</title>
+<title>DScaler - Dynasty Warrior 2 Intro Movie Screenshot</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Dynasty Warrior 2 (PSX2) Screenshot&nbsp;<!-- #EndEditable --></b></font></td>
@@ -49,8 +49,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <b>Source</b>: Playstation 2<br>
         <b>Connection</b>: S-Video<br>
         <b>Capture/Tuner Card</b>: Pinnacle PCTV Rave</p>
-      <p>Thanks to Felix for showing the versatility of dTV!</p>
-      <p>A capture from the intro movie to Dynasty Warrior 2, utilizing dTV's 
+      <p>Thanks to Felix for showing the versatility of DScaler!</p>
+      <p>A capture from the intro movie to Dynasty Warrior 2, utilizing DScaler's 
         video deinterlacing algorithm.<br>
         <img src="Dynasty_Warrior_2_Intro.jpg" width="754" height="480"> 
       </p>
