--- a/htdocs/screenshots/addl_screenshots.htm
+++ b/htdocs/screenshots/addl_screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Additional Screenshots</title>
+<title>DScaler - Additional Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,10 +28,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
-      dTV Screenshot Library&nbsp;<!-- #EndEditable --></b></font></td>
+      DScaler Screenshot Library&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -43,7 +43,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p>Below, you will find additional screenshots organized by source. After 
         viewing these shots, we are confident that you will see for yourself the 
-        clear benefits of deinterlacing using dTV through your 400 MHz Windows 
+        clear benefits of deinterlacing using DScaler through your 400 MHz Windows 
         PC and a $50 capture card.</p>
       <p>Thanks to all who have contributed to this screenshot library.</p>
       <h2><br>
