--- a/htdocs/screenshots/index.htm
+++ b/htdocs/screenshots/index.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Titanic VHS Screenshots</title>
+<title>DScaler - Titanic VHS Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Titanic (VHS) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
@@ -41,7 +41,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Please take the <a href="../dtv-vs-windvd/Super_Speedway_WinDVD_Showdown.htm">dTV 
+      <p>Please take the <a href="../dtv-vs-windvd/Super_Speedway_WinDVD_Showdown.htm">DScaler 
         versus WinDVD challenge</a> and see our library of <a href="addl_screenshots.htm">additional 
         screenshots</a> for captures using a variety of sources.</p>
       <h2>Titanic (VHS)</h2>
@@ -53,11 +53,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <b>Capture/Tuner Card</b>: Hauppauge PCI-TV<br>
         <b>Projector/HDTV</b>: CRT projector</p>
       <p>Thanks to Mark for providing this clear demonstration of the benefits 
-        of dTV!</p>
+        of DScaler!</p>
       <p><b>Before</b> processing using dTV's 3/2 pulldown algorithm provided 
         in dTV version 1.5.<br>
         <img src="TitanicBefore.jpg" width="640" height="480" border="3"></p>
-      <p><b>After</b> processing using dTV's 3/2 pulldown algorithm.<br>
+      <p><b>After</b> processing using DScaler's 3/2 pulldown algorithm.<br>
         <img src="TitanicAfter.jpg" width="640" height="480" border="3"></p>
       <h3><br>
         Settings</h3>
