--- a/htdocs/setup/index.htm
+++ b/htdocs/setup/index.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Installation &amp; Setup</title>
+<title>DScaler - Installation &amp; Setup</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Installation 
       &amp; Setup&nbsp;<!-- #EndEditable --></b></font></td>
@@ -46,15 +46,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         to find out if your video capture card is supported. Please note that 
         currently, your performance may degrade significantly if your CPU is slower 
         than 400 MHz or your video card is not AGP. In addition, when using a 
-        system that is borderline fast enough, dTV is sensitive to system tray 
+        system that is borderline fast enough, DScaler is sensitive to system tray 
         applications and active services.</p>
       <H2><br>
         Installation</H2>
       <P>Unzip all the files into a directory.</P>
       <h2><br>
         Getting It Working</h2>
-      <p>1. Delete any previous copy of dTV.ini</p>
-      <p>2. Run dTV.exe</p>
+      <p>1. Delete any previous copy of DScaler.ini</p>
+      <p>2. Run DScaler.exe</p>
       <p> 3. Select specify your tuner card, tuner type, processor speed, and 
         preferred default from the dialog box that appears on startup. If your 
         exact card type is not listed then try Standard Card (bt878). The make 
@@ -85,11 +85,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         and Page-Down buttons to navigate through channels.</p>
       <h3><img src="setup_channels_channel_list.jpg" width="533" height="260" border="2"></h3>
       <p><br>
-        10. Choose the preferred aspect ratio for your source, or let dTV autodetect 
+        10. Choose the preferred aspect ratio for your source, or let DScaler autodetect 
         the proper aspect ratio.</p>
       <h3><img src="setup_ar_advanced_ratios.jpg" border="2"></h3>
       <p><br>
-        For more information about the advanced features available via the dTV.ini 
+        For more information about the advanced features available via the DScaler.ini 
         file, please see the <a href="../IniFile.HTM">.ini documentation</a>. 
       </p>
       <h2><br>
