--- a/dTV/Help/Thanks.htm
+++ b/dTV/Help/Thanks.htm
@@ -60,7 +60,6 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV 
           and Yvon for creating and updating the FAQ.</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
-        <li>Thanks to everybody on the deinterlace project mailing list.</li>
         <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
           computer deinterlacing program--the inspiration for this project.</li>
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
@@ -71,8 +70,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
           Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the 
           screen capture code. </li>
-        <li>Thanks to Torbjörn Jansson for some bug fixes </li>
+        <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
         <li>Thanks to Erik Språng for the new DScaler logo. </li>
+        <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
+        <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
       </ol>
       <!-- #EndEditable --></td>
   </tr>
