--- a/dTV/Help/user_support.htm
+++ b/dTV/Help/user_support.htm
@@ -41,7 +41,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Currently, all support for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
+      <p>Currently, most for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
         Home Theater PC Forum</a>, the largest such forum on the internet and 
         a great place to pick up information and advice. Please feel free 
         to stop by and say hello. You can post questions, bug reports, and suggestions 
@@ -59,9 +59,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Yvon Quere (Yvonus), the FAQ maintainer;<br>
         Jason Castle (jcastle), the todo and bugs pages maintainer; and<br>
         (Slithy Tove), the .ini file page maintainer.</p>
-      <p><u>DScaler</u><u> Developers</u><br>
-        John Adcock (JohnAd), the founder of the project;<br>
-        Mark Rejhon, the administrator of the project;<br>
+      <p><u>DScaler Developers</u><br>
+        John Adcock (JohnAd), the founder and administrator of the project;<br>
+        Mark Rejhon, developer;<br>
         Steve Grimm (StevenGrimm), developer;<br>
         Tom Barry (trbarry), developer;<br>
         Mark Fiechtner, developer;<br>
